src/objects/OpportunityStatusEvent__e.object
<CustomObject>
    <fields>
        <fullName>AccountAccessTypes__c</fullName>
        <label>AccountAccessTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountBookingType__c</fullName>
        <label>AccountBookingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementForm__c</fullName>
        <label>AgreementForm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingTerms__c</fullName>
        <label>BillingTerms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearingHouse__c</fullName>
        <label>ClearingHouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <label>DealType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiableOffice__c</fullName>
        <label>LiableOffice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestorId__c</fullName>
        <label>RequestorId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMRevenueShares__c</fullName>
        <label>SMRevenueShares</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesChannels__c</fullName>
        <label>SalesChannels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesManagerId__c</fullName>
        <label>SalesManagerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTeam__c</fullName>
        <label>SalesTeam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCity__c</fullName>
        <label>UserCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserContactFirstName__c</fullName>
        <label>UserContactFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserContactLastName__c</fullName>
        <label>UserContactLastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCountry__c</fullName>
        <label>UserCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmailAddress__c</fullName>
        <label>UserEmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserGender__c</fullName>
        <label>UserGender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserHouseNumber__c</fullName>
        <label>UserHouseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPhoneNumber__c</fullName>
        <label>UserPhoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserStreet__c</fullName>
        <label>UserStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserZipCode__c</fullName>
        <label>UserZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OpportunityStatusEvent</label>
    <pluralLabel>OpportunityStatusEvents</pluralLabel>
</CustomObject>